--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link href="dist/cssreset-min.css" rel="stylesheet" />
   <link href="dist/common.css" rel="stylesheet" />
   <script src="dist/jquery-1.11.2.min.js" type="text/javascript"></script>
+  <script src="dist/functions.js" type="text/javascript"></script>
   <script src="dist/common.js" type="text/javascript"></script>
 </head>
 <body>
-
+<h1 class="text-primary">mytools</h1>
 </body>
 </html>
