--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
   <title>mytools</title>
-  <link href="dist/cssreset-min.css" rel="stylesheet" />
+  <!-- <link href="dist/cssreset-min.css" rel="stylesheet" /> -->
+  <link href="dist/normalize.css" rel="stylesheet" />
   <link href="dist/common.css" rel="stylesheet" />
   <script src="dist/jquery-1.11.2.min.js" type="text/javascript"></script>
   <script src="dist/functions.js" type="text/javascript"></script>
