--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
 <meta charset="utf-8" />
   <title>mytools</title>
-  <!-- <link href="dist/cssreset-min.css" rel="stylesheet" /> -->
-  <link href="dist/normalize.css" rel="stylesheet" />
-  <link href="dist/common.css" rel="stylesheet" />
-  <script src="dist/jquery-1.11.2.min.js" type="text/javascript"></script>
-  <script src="dist/functions.js" type="text/javascript"></script>
-  <script src="dist/common.js" type="text/javascript"></script>
+  <link href="/dist/normalize.css" rel="stylesheet" />
+  <link href="/dist/common.css" rel="stylesheet" />
+  <script src="/dist/jquery-1.11.2.min.js" type="text/javascript"></script>
+  <script src="/dist/functions.js" type="text/javascript"></script>
+  <script src="/dist/common.js" type="text/javascript"></script>
 </head>
 <body>
+
+<h1>mytools</h1>
+
+<h2>NAVIGATION</h2>
+<ul>
+  <li><a href="#guidelines">ガイドライン</a></li>
+</ul>
+
+<h2 id="guidelines">ガイドライン</h2>
 
 </body>
 </html>
