--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
   <title>mytools</title>
-  <link href="/dist/normalize.css" rel="stylesheet" />
+  <link href="dist/cssreset-min.css" rel="stylesheet" />
   <link href="/dist/common.css" rel="stylesheet" />
   <script src="/dist/jquery-1.11.2.min.js" type="text/javascript"></script>
   <script src="/dist/functions.js" type="text/javascript"></script>
@@ -11,14 +11,101 @@
 </head>
 <body>
 
+<div class="wrap">
 <h1>mytools</h1>
-
-<h2>NAVIGATION</h2>
-<ul>
+<p class="alert">この文書はDraftです。</p>
+<ul class="section">
   <li><a href="#guidelines">ガイドライン</a></li>
 </ul>
 
-<h2 id="guidelines">ガイドライン</h2>
-
+<div class="section">
+  <h2 id="guidelines">ガイドライン</h2>
+    <div class="section">
+      <h3>用語</h3>
+      <div class="section">
+        <h4>ブロック</h4>
+        <ul>
+          <li>header:ヘッダー</li>
+          <li>footer:フッター</li>
+          <li>nav:ナビゲーション</li>
+          <li>content:コンテント</li>
+          <li>panel:パネル</li>
+        </ul>
+        <h4>エレメント</h4>
+        <ul>
+          <li>breadcrumb:パンくず</li>
+          <li>btn:ボタン</li>
+          <li>img:画像</li>
+          <li>bnr:バナー</li>
+          <li>text:テキスト</li>
+          <li>bg:バックグラウンド</li>
+          <li>aside:補足</li>
+          <li>label:ラベル</li>
+          <li>heading:タイトル</li>
+          <li>badge:バッジ</li>
+          <li>thumbnail:サムネイル</li>
+          <li>alert:アラート</li>
+          <li>well:外枠</li>
+        </ul>
+        <h4>サイズ</h4>
+        <ul>
+          <li>xl:Extra Large</li>
+          <li>lg:Large</li>
+          <li>sm:Small</li>
+          <li>xs:Extra Small</li>
+        </ul>
+        <h4>重要度</h4>
+        <ul>
+          <li>primary:最重要</li>
+          <li>secondary:2番目に重要</li>
+          <li>tertiary:3番目に重要</li>
+          <li>quarterly:4番目に重要</li>
+          <li>lead:テキストの中で強調する部分</li>
+        </ul>
+        <h4>ふるまい</h4>
+        <ul>
+          <li>default:通常</li>
+          <li>current:現在</li>
+          <li>active:アクティブ</li>
+          <li>deactive:アクティブではなくする</li>
+          <li>enabled:使用可能にする</li>
+          <li>disabled:使用不可</li>
+          <li>fixed:固定</li>
+          <li>hover:ホバー</li>
+          <li>muted</li>
+          <li>success</li>
+          <li>info</li>
+          <li>warning</li>
+          <li>danger</li>
+          <li>dismissable:消去可能</li>
+        </ul>
+      </div>
+    </div>
+</div>
+<div class="section">
+  <table class="table striped" summary="table">
+    <caption>caption</caption>
+    <thead>
+      <tr>
+        <th>header</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+      </tr>
+      <tr>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+        <td>data</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</div>
 </body>
 </html>
