--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <div class="wrap">
 <h1>mytools</h1>
 <p class="alert">この文書はDraftです。</p>
-<ul class="section">
-  <li><a href="#guidelines">ガイドライン</a></li>
-</ul>
+<div class="nav">
+  <ul class="btn_group">
+    <li class="btn"><a href="#guidelines">ガイドライン</a></li>
+    <li class="btn"><a href="#colorscheme">カラースキーム</a></li>
+  </ul>
+</div>
 
 <div class="section">
   <h2 id="guidelines">ガイドライン</h2>
