--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>mytools</title>
   <link href="dist/cssreset-min.css" rel="stylesheet" />
   <link href="/dist/common.css" rel="stylesheet" />
+  <link href="/dist/colorscheme.css" rel="stylesheet" />
   <script src="/dist/jquery-1.11.2.min.js" type="text/javascript"></script>
   <script src="/dist/functions.js" type="text/javascript"></script>
   <script src="/dist/common.js" type="text/javascript"></script>
@@ -21,8 +22,8 @@
   </ul>
 </div>
 
-<div class="section">
-  <h2 id="guidelines">ガイドライン</h2>
+<div class="section" id="guidelines">
+  <h2>ガイドライン</h2>
     <div class="section">
       <h3>用語</h3>
       <div class="section">
@@ -85,29 +86,70 @@
       </div>
     </div>
 </div>
-<div class="section">
-  <table class="table striped" summary="table">
-    <caption>caption</caption>
-    <thead>
-      <tr>
-        <th>header</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-      </tr>
-      <tr>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-        <td>data</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="section" id="colorscheme">
+  <h2>カラースキーム</h2>
+  <div class="clearfix">
+  <p>black</p>
+<span class="color_mine_shaft_approx">color_mine_shaft_approx</span>
+<span class="color_tuatara_approx">color_tuatara_approx</span>
+<span class="color_tundora_approx">color_tundora_approx</span>
+<span class="color_emperor_approx">color_emperor_approx</span>
+<span class="color_fuscous_gray_approx">color_fuscous_gray_approx</span>
+<span class="color_storm_dust_approx">color_storm_dust_approx</span>
+<span class="color_gray_approx">color_gray_approx</span>
+<span class="gray">gray</span>
+<span class="color_mountain_mist_approx">color_mountain_mist_approx</span>
+<span class="silver">silver</span>
+<span class="color_celeste_approx">color_celeste_approx</span>
+<span class="color_quill_gray_approx">color_quill_gray_approx</span>
+<span class="color_iron_approx">color_iron_approx</span>
+<span class="color_bon_jour_approx">color_bon_jour_approx</span>
+<span class="mercury">mercury</span>
+<span class="color_mercury_approx">color_mercury_approx</span>
+<span class="gallery">gallery</span>
+<span class="color_black_haze_approx">color_black_haze_approx</span>
+<p>red</p>
+<span class="color_thunderbird_approx">color_thunderbird_approx</span>
+<span class="persian_red">persian_red</span>
+<span class="red">red</span>
+<p>pink</p>
+<span class="color_razzmatazz_approx">color_razzmatazz_approx</span>
+<span class="color_brilliant_rose_approx">color_brilliant_rose_approx</span>
+<span class="color_carnation_approx">color_carnation_approx</span>
+<span class="color_sea_pink_approx">color_sea_pink_approx</span>
+<span class="color_carnation_pink_approx">color_carnation_pink_approx</span>
+<span class="color_pink_approx">color_pink_approx</span>
+<span class="color_forget_me_not_approx">color_forget_me_not_approx</span>
+<p>orange</p>
+<span class="color_scarlet_approx">color_scarlet_approx</span>
+<span class="color_flamingo_approx">color_flamingo_approx</span>
+<span class="color_crusta_approx">color_crusta_approx</span>
+<span class="color_sorbus_approx">color_sorbus_approx</span>
+<span class="web_orange">web_orange</span>
+<p>green</p>
+<span class="color_jewel_approx">color_jewel_approx</span>
+<span class="color_vida_loca_approx">color_vida_loca_approx</span>
+<span class="color_japanese_laurel_approx">color_japanese_laurel_approx</span>
+<span class="color_apple_approx">color_apple_approx</span>
+<span class="color_olive_drab_approx">color_olive_drab_approx</span>
+<p>purple</p>
+<span class="color_electric_violet_approx">color_electric_violet_approx</span>
+<p>blue</p>
+<span class="blue">blue</span>
+<span class="color_dodger_blue_approx">color_dodger_blue_approx</span>
+<span class="color_denim_approx">color_denim_approx</span>
+<span class="color_breaker_bay_approx">color_breaker_bay_approx</span>
+<span class="color_scooter_approx">color_scooter_approx</span>
+<span class="color_bright_turquoise_approx">color_bright_turquoise_approx</span>
+<span class="color_athens_gray_approx">color_athens_gray_approx</span>
+<span class="color_twilight_blue_approx">color_twilight_blue_approx</span>
+<p>yellow</p>
+<span class="color_mondo_approx">color_mondo_approx</span>
+<span class="color_gray_nickel_approx">color_gray_nickel_approx</span>
+<span class="color_putty_approx">color_putty_approx</span>
+<span class="color_drover_approx">color_drover_approx</span>
+<span class="color_half_and_half_approx">color_half_and_half_approx</span>
+</div>
 </div>
 </div>
 </body>
